tests/stage3/semantic_return_if_else_missing.err
type error
line: 5
function: FN_P_3850248925371
missing return
expected: i32
