tests/stage3/semantic_return_if_else_missing.imp
function choose(x: i32) -> i32 {
    if x == 0 {
        return 1
    }
}

function main() {
    return 0
}
